# nitrite-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  context7.json  nitrite-0.3.0-kv-separation-transaction-regression.md  nitrite-fjall-durability-and-concurrency-analysis.md  nitrite-hardening-report.md
.cargo/: config.toml
.claude/commands/: release.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  publish.yml  rust.yml
nitrite/: Cargo.toml  README.md
nitrite-bench/: Cargo.toml  README.md
nitrite-bench/benches/: comparison_bench.rs  concurrency_bench.rs  crud_bench.rs  fts_bench.rs  index_bench.rs  spatial_bench.rs  transaction_bench.rs
nitrite-bench/src/: config.rs  data_gen.rs  lib.rs  stores.rs
nitrite-derive/: Cargo.toml  README.md
nitrite-derive/src/: convertible.rs  lib.rs  nitrite_entity.rs
nitrite-fjall-adapter/: Cargo.toml  README.md
nitrite-fjall-adapter/src/: config.rs  lib.rs  map.rs  module.rs  ordered_key.rs  store.rs  tx_scope.rs  version.rs  wrapper.rs
nitrite-int-test/: Cargo.toml  README.md
nitrite-int-test/examples/: rust_feature_showcase.rs
nitrite-int-test/src/: lib.rs  main.rs  test_util.rs
nitrite-int-test/tests/: convertible_test.rs  custom_filter_test.rs  disk_usage_repro_test.rs  document_metadata_test.rs  durability_reopen_test.rs  index_null_key_scan_test.rs  index_write_bench.rs  multi_threaded_test.rs  nitrite_builder_test.rs  nitrite_entity_derive_test.rs  nitrite_integration_test.rs  redb_test.rs  store_test.rs  stream_test.rs
nitrite-int-test/tests/collection/: batch_operations_test.rs  collection_delete_negative_test.rs  collection_find_negative_test.rs  collection_index_negative_test.rs  collection_insert_negative_test.rs  collection_test.rs  compound_index_test.rs  field_index_test.rs  find_by_compound_index_test.rs  find_by_single_field_index_test.rs  find_test.rs  index_test.rs  insert_test.rs  join_test.rs  mod.rs  non_unique_index_scale_test.rs  remove_test.rs  single_field_index_test.rs  update_test.rs
nitrite-int-test/tests/event/: event_test.rs  mod.rs
nitrite-int-test/tests/fts/: fts_index_test.rs  mod.rs
nitrite-int-test/tests/migration/: migration_test.rs  mod.rs
nitrite-int-test/tests/repository/: compound_index_test.rs  mod.rs  nitrite_id_as_id_test.rs  object_cursor_test.rs  object_repository_negative_test.rs  object_repository_test.rs  projection_join_test.rs  repository_factory_test.rs  repository_modification_test.rs  repository_search_test.rs
nitrite-int-test/tests/spatial/: geometry_enhancements_test.rs  mod.rs  spatial_index_test.rs
nitrite-int-test/tests/transaction/: mod.rs  transaction_collection_test.rs  transaction_repository_test.rs
nitrite-spatial/: Cargo.toml  README.md
nitrite-spatial/benches/: rtree_bench.rs
nitrite-spatial/src/: bounding_box.rs  filter.rs  fluent.rs  geometry.rs  geometry_extended.rs  hilbert.rs  index.rs  indexer.rs  lib.rs  nitrite_rtree.rs  spatial_module.rs
nitrite-spatial/src/disk_rtree/: mod.rs  persistence.rs  rtree_cache.rs  rtree_constants.rs  rtree_impl.rs  rtree_storage.rs  rtree_types.rs
nitrite-tantivy-fts/: Cargo.toml  README.md
nitrite-tantivy-fts/src/: config.rs  filter.rs  fluent.rs  fts_module.rs  index.rs  indexer.rs  lib.rs
nitrite-vector/: Cargo.toml  README.md
nitrite-vector/benches/: vector_bench.rs
nitrite-vector/src/: distance.rs  filter.rs  fluent.rs  hnsw.rs  indexer.rs  lib.rs  module.rs  node.rs  precision.rs  rag.rs  vector_index.rs
nitrite-vector/src/diskann/: flat_store.rs  mod.rs  pq.rs  vamana.rs
nitrite-vector/tests/: diskann_test.rs  metric_test.rs  persistence_test.rs  rag_store_test.rs  vector_index_test.rs
nitrite-vector/tests/common/: mod.rs
nitrite/src/: errors.rs  lib.rs  metadata.rs  nitrite.rs  nitrite_builder.rs  nitrite_config.rs
nitrite/src/collection/: collection_factory.rs  default_nitrite_collection.rs  document.rs  event.rs  find_options.rs  find_plan.rs  mod.rs  nitrite_collection.rs  nitrite_id.rs  snowflake.rs  update_options.rs
nitrite/src/collection/operation/: collection_operations.rs  find_optimizer.rs  index_manager.rs  index_operations.rs  index_writer.rs  mod.rs  read_operations.rs  write_operations.rs  write_result.rs
nitrite/src/common/: constants.rs  event_bus.rs  fields.rs  lock.rs  meta.rs  mod.rs  persistent_collection.rs  processor.rs  security.rs  sort_order.rs  value.rs
nitrite/src/common/convertible/: convertible.rs  mod.rs
nitrite/src/common/module/: mod.rs  module.rs  plugin_manager.rs
nitrite/src/common/stream/: document_cursor.rs  filtered_stream.rs  indexed_stream.rs  joined_cursor.rs  map_values.rs  mod.rs  projected_cursor.rs  single_stream.rs  sorted_stream.rs  union_stream.rs  unique_stream.rs
nitrite/src/common/util/: date_utils.rs  document_utils.rs  index_utils.rs  mod.rs  navigable_map.rs  object_utils.rs  task_util.rs  tokenizer.rs  type_utils.rs
nitrite/src/filter/: basic_filters.rs  filter.rs  fluent.rs  logical_filters.rs  mod.rs  pattern_filters.rs  range_filters.rs
nitrite/src/index/: compound_index.rs  descriptor.rs  index_map.rs  index_meta.rs  index_scanner.rs  mod.rs  nitrite_index.rs  nitrite_indexer.rs  non_unique_indexer.rs  options.rs  simple_index.rs  text_index.rs  text_indexer.rs  unique_indexer.rs
nitrite/src/index/text/: language.rs  language_tokenizer.rs  mod.rs  tokenizer.rs
nitrite/src/index/text/languages/: mod.rs  stop_words.rs
nitrite/src/migration/: commands.rs  instructions.rs  manager.rs  migration.rs  mod.rs
nitrite/src/repository/: cursor.rs  default_object_repository.rs  entity.rs  mod.rs  repository.rs  repository_factory.rs  repository_operations.rs
nitrite/src/store/: event.rs  iters.rs  meta.rs  mod.rs  nitrite_map.rs  nitrite_store.rs  store_catalog.rs  store_config.rs  store_module.rs
nitrite/src/store/memory/: config.rs  map.rs  mod.rs  module.rs  store.rs
nitrite/src/transaction/: core.rs  iters.rs  mod.rs  nitrite_transaction.rs  session.rs  transaction_store.rs  transactional_collection.rs  transactional_map.rs  transactional_repository.rs
