[package]
name = "nitrite_fjall_adapter"
version = "0.2.0"
edition = "2021"
description = "Fjall storage adapter for Nitrite database - persistent LSM-tree storage"
license = "Apache-2.0"
repository = "https://github.com/nitrite/nitrite-rust"
readme = "README.md"
keywords = ["database", "storage", "fjall", "lsm-tree"]
categories = ["database"]

[dependencies]
nitrite = { version = "0.2.0", path = "../nitrite" }
fjall = { version = "2.6.3", features = ["bytes"] }
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.14"
cargo_toml = "0.22.1"
dashmap = "6.1.0"
crossbeam = "0.8.4"
lru = "0.16.3"
parking_lot = "0.12.4"
thiserror = "2.0"

[dev-dependencies]
uuid = { version = "1.15.1", features = ["v4"] }
ctor = "0.4.0"
colog = "1.3.0"

