[package]
name = "nitrite_spatial"
version = "0.2.0"
edition = "2021"
description = "Spatial indexing support for Nitrite database using R-Tree"
license = "Apache-2.0"
repository = "https://github.com/nitrite/nitrite-rust"
readme = "README.md"
keywords = ["database", "spatial", "rtree", "geospatial"]
categories = ["database", "science::geo"]

[dependencies]
# Core nitrite dependency for error compatibility
nitrite = { version = "0.2.0", path = "../nitrite" }

# Spatial indexing
rstar = { version = "0.12", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Utilities
thiserror = "2.0"
log = "0.4"

# File handling for persistence
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.15"
env_logger = "0.11"
rand = "0.8"
criterion = "0.8"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[[bench]]
name = "rtree_bench"
harness = false